--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignorar node_modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# Ignorar pastas de build do Next.js
+.next/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# Ignorar arquivos temporários do sistema operacional (opcional)
 .DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+Thumbs.db
