--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,35 @@
-# Ignorar node_modules
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Ignorar pastas de build do Next.js
-.next/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-# Ignorar arquivos temporários do sistema operacional (opcional)
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+
